--- a/sun/game-data/levels/h_level_intro_boss/h_level_intro_boss.yml
+++ b/sun/game-data/levels/h_level_intro_boss/h_level_intro_boss.yml
@@ -2,6 +2,7 @@ name: h_level_intro_boss
 background_image: game-data/levels/h_level_intro_boss/h_level_intro_boss.png
 background_music: game-data/music/silence.wav
 background_music: game-data/music/drumbeats.wav
+wayfinding: game-data/levels/h_level_1/wayfinding.yml
 reward_level: game-data/levels/h_level_1/h_level_1.yml
 player_start_position: [ 100, 100 ]
 
