--- a/sun/game-data/levels/load_screen/load_screen.yml
+++ b/sun/game-data/levels/load_screen/load_screen.yml
@@ -60,8 +60,10 @@ event_areas:
     action: noop
     info_window:
       description:
-        - .          Welcome to Haligonia,
-        - . where the adventures are unreal.
-        - .             Is everything else?
+        - "          Welcome to Haligonia,"
+        -
+        - " where the adventures are unreal."
+        -
+        - "             Is everything else?"
       position: [ 260, 230 ]
       size: [0, 0 ]
