--- a/sun/game-data/levels/h_level_intro_boss/h_level_intro_boss.yml
+++ b/sun/game-data/levels/h_level_intro_boss/h_level_intro_boss.yml
@@ -32,11 +32,13 @@ event_areas:
     action: noop
     info_window:
       description:
-        - "Rubu You are strong to make it this far or you got help"
-        - "No matter I ripped you out of the Matrix there's no where to hide"
-        - "Get ready to be Ponged!"
-      position: [ 100, 550 ]
-      size: [ 620, 500 ]
+        - Rubu, ''You are strong to make it this far or you got help
+        -
+        - "             No matter I ripped you out of the Matrix, there's no "
+        -
+        - "             where to hide! Get ready to be Ponged!!!''"
+      position: [ 100, 520 ]
+      size: [ 620, 725 ]
     
 declared_enemies:
   - enemy_yaml: game-data/enemies/rubu_anim.yml
