working on editing enemies stat in lvl intro.

--- a/sun/game-data/enemies/baby_horned_pig_anim.yml
+++ b/sun/game-data/enemies/baby_horned_pig_anim.yml
@@ -6,5 +6,9 @@ enemy:
   animation_rate: 5
   position: [ 100 , 100 ]
   base_direction: 90
-  health: 10
   velocity: 1
+  stats:
+    health: 300
+    max_health: 300
+    defense: 15
+    strength: 10
