--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -1,14 +1,14 @@
 ---
 player:
   step_size: 1
-  position:
-  - 218.82732969850187
-  - 166.27738156805222
-  direction: 355
+  position: !ruby/object:GVector
+    x: 193.99859210901099
+    y: 168.60658444928782
+  direction: 265
   turn_speed: 5
   movement_distance: 2
   menu_action_delay: 12
-  enemies_killed: 14
+  enemies_killed: 6
   image_path: game-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
@@ -23,7 +23,7 @@ player:
   stats:
     strength: 10
     defense: 5
-    health: 1000
+    health: 930
     max_health: 1000
     speed: 5
     accuracy: 5
