--- a/sun/game-data/levels/h_level_intro_reward/h_level_intro_reward.yml
+++ b/sun/game-data/levels/h_level_intro_reward/h_level_intro_reward.yml
@@ -1,7 +1,6 @@
 name: h_level_intro_reward
 background_image: game-data/levels/h_level_intro_reward/h_level_intro_reward.png
 background_music: game-data/music/silence.wav
-background_music: game-data/music/drumbeats.wav
 wayfinding: game-data/levels/h_level_1/wayfinding.yml
 reward_level: game-data/levels/h_level_1/h_level_1.yml
 player_start_position: [ 100, 100 ]
@@ -51,7 +50,7 @@ event_areas:
         -
         - "         The world won't look the same and your current phsyical being "
         -
-        - "         won't last. Once you continue on from here you deteriorate to"
+        - "         won't last. Once you continue on from here you'll deteriorate to"
         -
         - "         primitive codes. Don't worry, I'll find a way to help you get "
         -
@@ -65,3 +64,17 @@ event_areas:
         - "         be tough, but I'll be there with you. Choose your path!''"
       position: [ 140, 225 ]
       size: [ 580, 440 ]
+
+  - top_left: [ 494, 60 ]
+    bottom_right: [ 751, 215 ]
+    action: LOAD_LEVEL
+    action_argument: "game-data/levels/h_level_1/h_level_1.yml"
+    info_window:
+      description:
+        - "Your real adventure beggins!"
+        -
+        - "Destroy your them and take"
+        -
+        - "back what's rightfully yours!"
+      position: [ 493, 225 ]
+      size: [ 258, 310 ]
