--- a/sun/game-data/levels/load_screen/load_screen.yml
+++ b/sun/game-data/levels/load_screen/load_screen.yml
@@ -49,7 +49,7 @@ event_areas:
       size: [ 252, 419 ]
   - top_left: [ 87, 106 ]
     bottom_right: [ 246, 160 ]
-    action: queue_continue_event
+    action: continue_last_game
     info_window:
       description:
         - Continue recent game.
