--- a/sun/test-data/levels/load_screen_with_images/load_screen_with_images.yml
+++ b/sun/test-data/levels/load_screen_with_images/load_screen_with_images.yml
@@ -51,7 +51,7 @@ event_areas:
   - top_left: [ 360, 280 ]
     bottom_right: [ 630, 470 ]
     label: Continue
-    action: queue_continue_event
+    action: continue_last_game
 
 animations:
   - animation_name: levelanim1
