--- a/sun/game-data/game.yml
+++ b/sun/game-data/game.yml
@@ -12,3 +12,4 @@ game:
   game_load_path: "game-data/loads/"
   game_over_menu: "game-data/menus/game_over.yml"
   menu_for_save_game: "game-data/menus/save_game.yml"
+  player_damage_mask: "game-data/sprites/player_damage.png"
