--- a/sun/test-data/demo_font_config.yml
+++ b/sun/test-data/demo_font_config.yml
@@ -13,5 +13,6 @@ game:
   game_load_path: "test-data/loads/"
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_main: "test-data/menus/main.yml"
+  player_damage_mask: "test-data/sprites/player_damage.png"
   font_config:
     font_size: 18
