--- a/sun/test-data/game_with_level_hud.yml
+++ b/sun/test-data/game_with_level_hud.yml
@@ -12,3 +12,4 @@ game:
   menu_for_main: "test-data/menus/main.yml"
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_save_game: "test-data/menus/save_game.yml"
+  player_damage_mask: "test-data/sprites/player_damage.png"
