--- a/sun/test-data/splash.yml
+++ b/sun/test-data/splash.yml
@@ -15,3 +15,4 @@ game:
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_save_game: "test-data/menus/save_game.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
+  player_bullet: "test-data/equipment/bullet.png"
