--- a/sun/test-data/demo.yml
+++ b/sun/test-data/demo.yml
@@ -14,3 +14,5 @@ game:
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_main: "test-data/menus/main.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
+  player_bullet: "test-data/equipment/bullet.png"
+  player_bullet: "test-data/equipment/bullet.png"
