--- a/sun/test-data/demo_font_config.yml
+++ b/sun/test-data/demo_font_config.yml
@@ -14,5 +14,6 @@ game:
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_main: "test-data/menus/main.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
+  player_bullet: "test-data/equipment/bullet.png"
   font_config:
     font_size: 18
