--- a/sun/test-data/demo_inventory.yml
+++ b/sun/test-data/demo_inventory.yml
@@ -14,4 +14,5 @@ game:
   menu_for_save_game: "test-data/menus/save_game.yml"
   menu_for_main: "test-data/menus/main.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
+  player_bullet: "test-data/equipment/bullet.png"
   inventory: "test-data/equipment/all_equip.yml"
