--- a/sun/test-data/with_images.yml
+++ b/sun/test-data/with_images.yml
@@ -14,3 +14,4 @@ game:
   menu_for_save_game: "test-data/menus/save_game.yml"
   menu_for_main: "test-data/menus/main.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
+  player_bullet: "test-data/equipment/bullet.png"
