--- a/sun/game-data/game.yml
+++ b/sun/game-data/game.yml
@@ -13,4 +13,6 @@ game:
   game_over_menu: "game-data/menus/game_over.yml"
   menu_for_save_game: "game-data/menus/save_game.yml"
   player_damage_mask: "game-data/sprites/player_damage.png"
+  game_over_level: "game-data/levels/game_over/game_over.yml"
+  game_over_level: "game-data/levels/game_over/game_over.yml"
   player_bullet: "game-data/equipment/bullet.png"
