--- a/sun/game-data/new_game_load_screen.yml
+++ b/sun/game-data/new_game_load_screen.yml
@@ -10,9 +10,13 @@ game:
   new_game_level: "game-data/levels/h_level_intro/h_level_intro.yml"
   menu_for_load_game: "game-data/menus/load_game.yml"
   game_load_path: "game-data/loads/"
-  splash_screen: "game-data/screens/splash_screen_v3.png"
+  splash_screens:
+    - "game-data/screens/splash_screen_v3.png"
+    - "game-data/splash/SplashScr1.png"
+    - "game-data/splash/SplashScr2.png"
   game_over_menu: "game-data/menus/game_over.yml"
   menu_for_save_game: "game-data/menus/save_game.yml"
   menu_for_main: "game-data/menus/main.yml"
   player_damage_mask: "game-data/sprites/player_damage.png"
+  game_over_level: "game-data/levels/game_over/game_over.yml"
   player_bullet: "game-data/equipment/bullet.png"
