--- a/sun/test-data/demo_start.yml
+++ b/sun/test-data/demo_start.yml
@@ -14,4 +14,5 @@ game:
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_main: "test-data/menus/main.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
+  game_over_level: "test-data/levels/game_over/game_over.yml"
   player_bullet: "test-data/equipment/bullet.png"
