--- a/sun/test-data/game_with_level_hud.yml
+++ b/sun/test-data/game_with_level_hud.yml
@@ -13,4 +13,5 @@ game:
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_save_game: "test-data/menus/save_game.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
+  game_over_level: "test-data/levels/game_over/game_over.yml"
   player_bullet: "test-data/equipment/bullet.png"
