--- a/sun/test-data/splash3.yml
+++ b/sun/test-data/splash3.yml
@@ -2,7 +2,7 @@ game:
   width: 640
   height: 480
   collision_response: "test-data/collision_response/collision_response.yml"
-  level: "test-data/levels/load_screen_with_images/load_screen_with_images.yml"
+  level: "test-data/levels/load_screen/load_screen.yml"
   input_controller: "test-data/input/input_config.yml"
   player: "test-data/players/load_screen_player.yml"
   sound_controller: "test-data/sounds/sound_config.yml"
@@ -10,9 +10,13 @@ game:
   new_game_level: "test-data/levels/demo/demo.yml"
   menu_for_load_game: "test-data/menus/load_game.yml"
   game_load_path: "test-data/loads/"
+  splash_screens:
+    - "test-data/screens/splash_screen.png"
+    - "test-data/screens/splash_screen.png"
+    - "test-data/screens/splash_screen.png"
+  menu_for_main: "test-data/menus/main.yml"
   game_over_menu: "test-data/menus/game_over.yml"
   menu_for_save_game: "test-data/menus/save_game.yml"
-  menu_for_main: "test-data/menus/main.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
   game_over_level: "test-data/levels/game_over/game_over.yml"
   player_bullet: "test-data/equipment/bullet.png"
