--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -24,6 +24,7 @@ collision_response:
     "EventEmitter": [ trigger_event2 ]
     "MouseCollisionWrapper": [ mouse_pick1 ]
     "Weapon": [  ]
+    "EventArea": [ show_info_window2 ]
 #TODO note that player vs weapon collisions will need to be handled, eg check to see if it's your weapon
   "MouseCollisionWrapper":
     "Player": [ mouse_pick1 ]
