--- a/sun/test-data/enemies/enemy_ai.yml
+++ b/sun/test-data/enemies/enemy_ai.yml
@@ -10,6 +10,8 @@ enemy:
         - chase:
           - enemy_in_range: attack
           - enemy_lost: wait
+          - enemy_too_far: chase
+          - enemy_sighted: chase
         - attack:
           - enemy_too_far: chase
           - enemy_lost: wait
