--- a/sun/game-data/new_game_load_screen.yml
+++ b/sun/game-data/new_game_load_screen.yml
@@ -11,9 +11,9 @@ game:
   menu_for_load_game: "game-data/menus/load_game.yml"
   game_load_path: "game-data/loads/"
   splash_screens:
-    - "game-data/splash/B&T_blue.png"
+    - "game-data/splash/splash_B&T_blue.png"
     - "game-data/splash/splash_tour_Haligonia.png"
-    - "game-data/splash/SplashScr2.png"
+    - "game-data/splash/splash_armor.png"
   game_over_menu: "game-data/menus/game_over.yml"
   menu_for_save_game: "game-data/menus/save_game.yml"
   menu_for_main: "game-data/menus/main.yml"
