--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,28 +2,28 @@
 player:
   step_size: 1
   position: !ruby/object:GVector
-    x: 116.22777018624735
-    y: 168.93567291004877
-  direction: 15
+    x: 233.18780085896702
+    y: 184.5034673926243
+  direction: 330
   turn_speed: 5
   movement_distance: 2
   menu_action_delay: 12
-  enemies_killed: 8
+  enemies_killed: 18
   image_path: game-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
   animation_width: 32
   animation_height: 16
-  image_file: !!null 
+  image_file: 
   animation_path: game-data/sprites/anima_gold_avatar_smaller.png
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
-  damage_sound_effect_name: !!null 
+  damage_sound_effect_name: 
   stats:
     strength: 10
     defense: 5
-    health: 548
+    health: 985
     max_health: 1000
     speed: 5
     accuracy: 5
