--- a/sun/game-data/menus/save_game.yml
+++ b/sun/game-data/menus/save_game.yml
@@ -1,20 +1,30 @@
 menu:
   menu_id: save_game
+
   entries:
-    - display_text: "  Navigate menu with ''UP'' and ''DOWN'' keys then ''ENTER'' to select. ''M'' to exit menu.:"
     - display_text: ""
-    - display_text: "  Slot 1 {{last_save_time_for_slot}}"
+    - display_text: ""
+    - display_text: "                   "
+    - display_text: "                                      Navigate menu with ''UP'' and ''DOWN'' keys then "
+    - display_text: "                                      ''ENTER'' to select. ''M'' to exit menu.:"
+    - display_text: ""
+    - display_text: "                                                  Slot 1 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 1
-    - display_text: "  Slot 2 {{last_save_time_for_slot}}"
+      position: [ 100, 100 ]
+    - display_text: "                                                  Slot 2 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 2
-    - display_text: "  Slot 3 {{last_save_time_for_slot}}"
+      position: [ 100, 100 ]
+    - display_text: "                                                  Slot 3 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 3
-    - display_text: "  Slot 4 {{last_save_time_for_slot}}"
+      position: [ 100, 100 ]
+    - display_text: "                                                  Slot 4 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 4
-    - display_text: "  Slot 5 {{last_save_time_for_slot}}"
+      position: [ 100, 100 ]
+    - display_text: "                                                  Slot 5 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 5
+      position: [ 100, 100 ]
