--- a/sun/game-data/collision_response/collision_response.yml
+++ b/sun/game-data/collision_response/collision_response.yml
@@ -3,10 +3,13 @@ collision_response:
     "Player": [ trigger_event1 ]
   "Weapon":
     "LineSegment": []
+  "LineOfSightQuery":
+    "LineSegment": [ block_line_of_sight1  ]
   "LineSegment":
     "Player": [ blocking2 ]
     "VectorFollower": [ removing2 ]
     "Enemy": [ blocking2 ]
+    "LineOfSightQuery": [ block_line_of_sight2 ]
   "Enemy":
     "Enemy": [ ]
     "VectorFollower": [ damaging1, removing2, temporary_message1, show_damage1 ]
