--- a/sun/test-data/enemies/enemy_ai.yml
+++ b/sun/test-data/enemies/enemy_ai.yml
@@ -8,6 +8,7 @@ enemy:
         - wait:
           - enemy_sighted: chase
             enemy_too_far: wait
+            enemy_lost: wait
         - chase:
           - enemy_in_range: attack
           - enemy_lost: wait
@@ -16,3 +17,5 @@ enemy:
         - attack:
           - enemy_too_far: chase
           - enemy_lost: wait
+          - enemy_sighted: attack
+          - enemy_in_range: attack
