--- a/sun/game-data/menus/save_game.yml
+++ b/sun/game-data/menus/save_game.yml
@@ -1,30 +1,25 @@
 menu:
   menu_id: save_game
-
+  header_text: "foobar"
+  header_position: [ 500, 500 ]
   entries:
-    - display_text: ""
-    - display_text: ""
-    - display_text: "                   "
-    - display_text: "                                      Navigate menu with ''UP'' and ''DOWN'' keys then "
-    - display_text: "                                      ''ENTER'' to select. ''M'' to exit menu.:"
-    - display_text: ""
-    - display_text: "                                                  Slot 1 {{last_save_time_for_slot}}"
+    - display_text: "Slot 1 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 1
       position: [ 240, 150 ]
-    - display_text: "                                                  Slot 2 {{last_save_time_for_slot}}"
+    - display_text: "Slot 2 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 2
       position: [ 240, 170 ]
-    - display_text: "                                                  Slot 3 {{last_save_time_for_slot}}"
+    - display_text: "Slot 3 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 3
       position: [ 240, 190 ]
-    - display_text: "                                                  Slot 4 {{last_save_time_for_slot}}"
+    - display_text: "Slot 4 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 4
       position: [ 240, 210 ]
-    - display_text: "                                                  Slot 5 {{last_save_time_for_slot}}"
+    - display_text: "Slot 5 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 5
       position: [ 240, 230 ]
