--- a/sun/test-data/menus/header_menu.yml
+++ b/sun/test-data/menus/header_menu.yml
@@ -1,7 +1,9 @@
 menu:
   menu_id: header_menu
-  header_text: "fake header text"
-  header_position: [ 42, 69 ]
+  headers:
+    - header_text: "fake header text"
+      header_position: [ 42, 69 ]
+
   entries:
     - display_text: PM 1
       action: somefakething
