--- a/sun/game-data/menus/save_game.yml
+++ b/sun/game-data/menus/save_game.yml
@@ -2,27 +2,27 @@ menu:
   menu_id: save_game
   headers:
     - header_text: "Navigate menu with ''UP'' and ''DOWN'' keys then"
-      header_position: [ 240, 100 ]
-    - header_text: "use 'ENTER' to select or 'M' to exit the menu"
-      header_position: [ 240, 120 ]
+      header_position: [ 230, 100 ]
+    - header_text: "use 'ENTER' to select or 'M' to exit the menu:"
+      header_position: [ 230, 120 ]
   entries:
     - display_text: "Slot 1 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 1
-      position: [ 240, 150 ]
+      position: [ 250, 150 ]
     - display_text: "Slot 2 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 2
-      position: [ 240, 170 ]
+      position: [ 250, 170 ]
     - display_text: "Slot 3 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 3
-      position: [ 240, 190 ]
+      position: [ 250, 190 ]
     - display_text: "Slot 4 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 4
-      position: [ 240, 210 ]
+      position: [ 250, 210 ]
     - display_text: "Slot 5 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 5
-      position: [ 240, 230 ]
+      position: [ 250, 230 ]
