--- a/sun/game-data/menus/save_game.yml
+++ b/sun/game-data/menus/save_game.yml
@@ -1,28 +1,30 @@
 menu:
   menu_id: save_game
   headers:
+    - header_text: "SAVE MENU"
+      header_position: [ 350, 210 ]
     - header_text: "Navigate menu with ''UP'' and ''DOWN'' keys then"
-      header_position: [ 230, 100 ]
+      header_position: [ 230, 240 ]
     - header_text: "use 'ENTER' to select or 'M' to exit the menu:"
-      header_position: [ 230, 120 ]
+      header_position: [ 230, 260 ]
   entries:
     - display_text: "Slot 1 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 1
-      position: [ 250, 150 ]
+      position: [ 250, 290 ]
     - display_text: "Slot 2 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 2
-      position: [ 250, 170 ]
+      position: [ 250, 310 ]
     - display_text: "Slot 3 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 3
-      position: [ 250, 190 ]
+      position: [ 250, 330 ]
     - display_text: "Slot 4 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 4
-      position: [ 250, 210 ]
+      position: [ 250, 350 ]
     - display_text: "Slot 5 {{last_save_time_for_slot}}"
       action: save_game_slot
       action_argument: 5
-      position: [ 250, 230 ]
+      position: [ 250, 370 ]
