--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -20,7 +20,11 @@ collision_response:
     "Player": []
     "Enemy": [ damaging2, removing1 ]
     "LineSegment": [ removing1 ]
+
+  "PickupItem":
+    "Player": [ take_inventory1]
   "Player":
+    "PickupItem": [ take_inventory2]
     "LineSegment": [ blocking1 ]
     "VectorFollower": []
     "Enemy": [ damaging1, damaging2, blocking1 ]
