--- a/sun/test-data/levels/demo_start/demo_start.yml
+++ b/sun/test-data/levels/demo_start/demo_start.yml
@@ -4,6 +4,7 @@ background_music: test-data/music/music.wav
 wayfinding: test-data/levels/demo/wayfinding.yml
 reward_level: test-data/levels/foo/foo.yml
 player_start_position: [320, 240]
+player_start_health: 100
 measurements: [ 640, 480 ]
 
 declared_enemies:
