--- a/sun/game-data/levels/h_level_1/h_level_1.yml
+++ b/sun/game-data/levels/h_level_1/h_level_1.yml
@@ -1,6 +1,7 @@
 name: h_level_1
 background_image: game-data/levels/h_level_1/h_level_1.png
 background_music: game-data/music/drumbeats.wav
+heads_up_display: game-data/hud/hud_config.yml
 wayfinding: game-data/levels/h_level_1/wayfinding.yml
 reward_level: game-data/levels/h_level_1_reward/h_level_1_reward.yml
 player_start_position: [ 100, 320 ]
