--- a/sun/game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
+++ b/sun/game-data/levels/h_level_intro_interception/h_level_intro_interception.yml
@@ -1,6 +1,7 @@
 name: h_level_intro_interception
 background_image: game-data/levels/h_level_intro_interception/h_level_intro_interception.png
 background_music: game-data/music/silence.wav
+heads_up_display: game-data/hud/hud_config_empty.yml
 reward_level: game-data/levels/h_level_1/h_level_1.yml
 player_start_position: [ 340, 300 ]
 
