--- a/sun/game-data/levels/h_level_intro_reward/h_level_intro_reward.yml
+++ b/sun/game-data/levels/h_level_intro_reward/h_level_intro_reward.yml
@@ -1,7 +1,7 @@
 name: h_level_intro_reward
 background_image: game-data/levels/h_level_intro_reward/h_level_intro_reward.png
 background_music: game-data/music/silence.wav
-wayfinding: game-data/levels/h_level_1/wayfinding.yml
+heads_up_display: game-data/hud/hud_config_empty.yml
 reward_level: game-data/levels/h_level_1/h_level_1.yml
 player_start_position: [ 100, 100 ]
 
