--- a/sun/game-data/levels/load_screen/load_screen.yml
+++ b/sun/game-data/levels/load_screen/load_screen.yml
@@ -3,6 +3,7 @@ background_image: game-data/levels/load_screen/load_screen_blue.png
 background_music: game-data/music/drumbeats.wav
 heads_up_display: game-data/hud/hud_config_empty.yml
 player_start_position: [ 364, 225 ]
+player_start_health: 5
 
 measurements: [ 800, 600 ]
 
