--- a/sun/game-data/levels/h_level_1/h_level_1.yml
+++ b/sun/game-data/levels/h_level_1/h_level_1.yml
@@ -1,6 +1,6 @@
 name: h_level_1
 background_image: game-data/levels/h_level_1/h_level_1.png
-background_music: game-data/music/drumbeats.wav
+background_music: game-data/music/silence.wav
 heads_up_display: game-data/hud/hud_config.yml
 wayfinding: game-data/levels/h_level_1/wayfinding.yml
 reward_level: game-data/levels/h_level_1_reward/h_level_1_reward.yml
@@ -12,14 +12,14 @@ anded_completion_conditions:
   - condition: player_health_at_least
     argument: 1
   - condition: player_near
-    argument: [ 610, 203 ]
+    argument: [ 730, 230 ]
 
 declared_enemies:
   - enemy_yaml: game-data/enemies/white_square.yml
     name: e1
 spawn_points:
-  - point: [ 610, 203 ]
-    name: ant_lvl_1
+  - point: [ 730, 230 ]
+    name: white_blocks
     spawn_schedule: 1 enemies every 100 ticks for 900 total ticks
     spawn_argument: [ e1 ]
 
@@ -41,22 +41,28 @@ line_segments:
     end_x: 800
     end_y: 600
     
-  - start_x: 320
+  - start_x: 300
     start_y: 0
-    end_x: 320
-    end_y: 140
+    end_x: 300
+    end_y: 161
+  - start_x: 300
+    start_y: 161
+    end_x: 518
+    end_y: 161
+  - start_x: 518
+    start_y: 161
+    end_x: 518
+    end_y: 0
 
-  - start_x: 318
-    start_y: 280
-    end_x: 318
-    end_y: 600
-
-  - start_x: 330
-    start_y: 0
-    end_x: 330
-    end_y: 140
-
-  - start_x: 325
-    start_y: 280
-    end_x: 325
+  - start_x: 300
+    start_y: 600
+    end_x: 300
+    end_y: 322
+  - start_x: 300
+    start_y: 322
+    end_x: 518
+    end_y: 322
+  - start_x: 518
+    start_y: 322
+    end_x: 518
     end_y: 600
