--- a/sun/game-data/levels/h_level_intro_reward/h_level_intro_reward.yml
+++ b/sun/game-data/levels/h_level_intro_reward/h_level_intro_reward.yml
@@ -4,6 +4,7 @@ background_music: game-data/music/silence.wav
 heads_up_display: game-data/hud/hud_config_empty.yml
 reward_level: game-data/levels/h_level_1/h_level_1.yml
 player_start_position: [ 100, 100 ]
+player_start_health: 100
 
 measurements: [ 800, 600 ]
 
@@ -35,7 +36,7 @@ event_areas:
         -
         - "                Might as well quit now and end your miserable existence!"
         -
-        - "                Press Q or hold down CTRL+ALT+DELETE!''"
+        - "                Press \"Q\" or hold down CTRL+ALT+DELETE!''"
       position: [ 100, 520 ]
       size: [ 620, 725 ]
 
