--- a/sun/test-data/loadarea/9/player.yml
+++ b/sun/test-data/loadarea/9/player.yml
@@ -1,7 +1,9 @@
 ---
 player:
   step_size: 1
-  position: !ruby/object:GVector {}
+  position: !ruby/object:GVector
+    x: 320
+    y: 240
   direction: 0
   turn_speed: 5
   movement_distance: 2
