--- a/sun/test-data/players/expected_gd_player.yml
+++ b/sun/test-data/players/expected_gd_player.yml
@@ -1,9 +1,9 @@
 --- 
 player:
   step_size: 1
-  position: !ruby/object:GVector
-    x: 320
-    y: 240
+  position:
+    - 320
+    - 240
   direction: 0
   turn_speed: 5
   movement_distance: 2
