--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -1,14 +1,14 @@
 ---
 player:
   step_size: 1
-  position: !ruby/object:GVector
-    x: 211.36507015479125
-    y: 169.77248915518285
+  position:
+  - 229
+  - 160
   direction: 312
   turn_speed: 8
   movement_distance: 5
   menu_action_delay: 12
-  enemies_killed: 13
+  enemies_killed: 14
   image_path: game-data/sprites/anima_gold_avatar_smaller.png
   collision_priority: 4
   base_accuracy: 100
@@ -23,7 +23,7 @@ player:
   stats:
     strength: 10
     defense: 5
-    health: 972
+    health: 974
     max_health: 1000
     speed: 5
     accuracy: 5
