--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -1,9 +1,9 @@
-name: reward
+name: h_level_3_reward
 background_image: game-data/levels/h_level_3_reward/h_level_3_reward.png
 background_music: game-data/music/crappypiano.wav
 heads_up_display: game-data/hud/hud_config_empty.yml
 wayfinding: game-data/levels/load_screen/wayfinding.yml
-player_start_position: [ 320, 240 ]
+player_start_position: [ 400, 300 ]
 
 measurements: [ 800, 600 ]
 
